# comic-viewer

./: package.json
.zed/: settings.json
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  schema.sql
src/routes/: +page.svelte  api.ts  library.svelte.ts  viewer.svelte.ts
src/routes/components/: AttributeChip.svelte  ResultGridVirtual.svelte  ResultItem.svelte  ResultListVirtual.svelte  SearchScreen.svelte  ViewerScreen.svelte
