[package]
name = "comic-viewer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comic_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7.0"
rusqlite = { version = "0.39.0", features = ["bundled", "cache"] }
walkdir = "2.5.0"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
lru = "0.18"
natord = "1.0"
base64 = "0.22"

# image-webp (純粋Rust実装) と image のリサイズ処理は最適化なしで壊滅的に遅いため、
# devビルドでも依存クレートのみ opt-level=3 にする。
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.image-webp]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.zune-core]
opt-level = 3
